# aiphone-gt-tools

./: Dockerfile  README.md
aiphone-x-tools/: .config
busserver_gw/: __init__.py  __main__.py
gt-1c7w-root-firmware/: encrypt.sh  gt  gt.pub  pub.cer
gt-1c7w-root-firmware/payload/: WP_VerUp.sh
gt-1c7w-tools/src/: CMakeLists.txt  busserver.c  guard_open.c  hookioctl.c  main.c  mon.c  openvideo.c  scanserial.c  startstream.c  unlock.c
